--- a/main.css
+++ b/main.css
@@ -283,7 +283,7 @@ header.fixed #logo {
 }
 
 h1, h2, h3, h4, h5 {
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Roboto';
     font-weight: lighter;
 }
 
@@ -304,7 +304,7 @@ h1, h2, h3, h4, h5 {
     color: #505050;
     cursor: pointer;
     font-size: 1.3em;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Roboto';
 }
 #form_input label > span {
     color: #e75858;
@@ -333,7 +333,7 @@ border-color: #343434;
     text-shadow: #454545 0 0 2px; /*Тень, ее цвет, как далеко */
     cursor: pointer;
     color: white;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Roboto';
 }
 
 .btn:hover{
@@ -388,7 +388,7 @@ font-size: 2.2em;
 }
 
 #faq p{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto';
     color: #4a4a4a;
     font-size: 0.95em;
     margin-bottom: 40px;
