--- a/talk.css
+++ b/talk.css
@@ -14,7 +14,7 @@ html {
 
 body {
     background-color: #fafafa;
-    font-family: 'Trebuchet MS', Helvetica;
+    font-family: 'Roboto';
 }
 
 /*шапка сайта*/
@@ -36,7 +36,7 @@ header #logo span {
     font-size: 1.7em;
     line-height: 45px;
     margin-left: 40px;
-    font-family: 'Suez One', serif;
+    font-family: 'Roboto';
 }
 
 @media (min-width: 701px) {
@@ -209,7 +209,7 @@ font-size: 2.2em;
 }
 
 #faq p{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto';
     color: #4a4a4a;
     font-size: 0.95em;
     margin-bottom: 5px;
@@ -279,7 +279,7 @@ border-color: #343434;
     text-shadow: #454545 0 0 2px; /*Тень, ее цвет, как далеко */
     cursor: pointer;
     color: white;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Roboto';
 }
 
 .btn:hover{
