--- a/items.css
+++ b/items.css
@@ -14,7 +14,7 @@ html {
 
 body {
     background-color: #fafafa;
-    font-family: 'Trebuchet MS', Helvetica;
+    font-family: 'Roboto';
 }
 
 /*шапка сайта*/
@@ -36,7 +36,7 @@ header #logo span {
     font-size: 1.7em;
     line-height: 45px;
     margin-left: 40px;
-    font-family: 'Suez One', serif;
+    font-family:'Roboto';
 }
 
 @media (min-width: 701px) {
@@ -311,7 +311,7 @@ header.fixed #logo {
 }
 
 h1, h2, h3, h4, h5 {
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Roboto';
     font-weight: lighter;
 }
 
@@ -332,7 +332,7 @@ h1, h2, h3, h4, h5 {
     color: #505050;
     cursor: pointer;
     font-size: 1.3em;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Roboto';
 }
 #form_input label > span {
     color: #e75858;
@@ -361,7 +361,7 @@ border-color: #343434;
     text-shadow: #454545 0 0 2px; /*Тень, ее цвет, как далеко */
     cursor: pointer;
     color: white;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Roboto';
 }
 
 .btn:hover{
